Add Replicated Caching using RMI

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 log4j.debug=false
-log4j.rootCategory=WARN, stdout
-log4j.category.net.sf.ehcache=WARN, stdout
+log4j.rootCategory=INFO, stdout
+# log4j.category.net.sf.ehcache.distribution.RMICachePeer=DEBUG, stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
